Añadido componente propio para dibujar circulos en el formulario (Diseño de login)
Add component to create circle on Forms (login design)

--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -52,8 +52,14 @@
     <Compile Include="MainFormProgram.Designer.cs">
       <DependentUpon>MainFormProgram.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyOwnCircleImageComponent.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="MainFormProgram.resx">
+      <DependentUpon>MainFormProgram.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
