- Agregado clase para imagenes circulares - Agregado imagen por defecto para usuario
- Add class to create circle images
- Add default user image

--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -52,6 +52,9 @@
     <Compile Include="MainFormProgram.Designer.cs">
       <DependentUpon>MainFormProgram.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyOwnCircleComponent.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainFormProgram.resx">
