--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CirularButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="MainFormProgram.cs">
       <SubType>Form</SubType>
     </Compile>
