- Agregado la clase hilo para la gestión de la conexion con el servidor.
- Add class to connect with server.

--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -52,6 +52,7 @@
     <Compile Include="CirularButton.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="ConnectionWithServer.cs" />
     <Compile Include="JSonObject.cs" />
     <Compile Include="MainFormProgram.cs">
       <SubType>Form</SubType>
