--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -60,6 +60,12 @@
     <Compile Include="MainFormProgram.Designer.cs">
       <DependentUpon>MainFormProgram.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelWindowsMessage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModelWindowsMessage.Designer.cs">
+      <DependentUpon>ModelWindowsMessage.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyOwnCircleComponent.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -67,6 +73,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="MainFormProgram.resx">
       <DependentUpon>MainFormProgram.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModelWindowsMessage.resx">
+      <DependentUpon>ModelWindowsMessage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
