- Renomabra clase JSonObject a JSonObjectArray. - Agregada clase JSonSingleData. - Agregado funcionamiento para pedir clave de encriptación al servidor y almacenarla en variable interna. - Agregado funcionamiento de serializar/deserializar JSON a partir de string con un formato específico.
- Rename class JSonObject to JSonObjectArray.
- Added class JSonSingleData.
- Added functionality to request AES key to server and save into internal variable.
- Added functionality to serialize/deserialize string (with JSON format).

--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -53,7 +53,8 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="ConnectionWithServer.cs" />
-    <Compile Include="JSonObject.cs" />
+    <Compile Include="JSonObjectArray.cs" />
+    <Compile Include="JSonSingleData.cs" />
     <Compile Include="MainFormProgram.cs">
       <SubType>Form</SubType>
     </Compile>
