- Arreglado bug con el buscador de preguntas. - Agregada ventana de warning para evitar perdida de datos por parte del usuario. - Agregada función de warning en las ventanas adecuadas. - Arreglado problema con el borde de la ventana de warning. - Agregada ventana de warning con opción de cancelar o continuar.
- Solved bug with search box.
- Added warning form to prevent lost data for user.
- Added functionality to alert the user when he can lost data.
- Solved problem with warning form border.
- Added warning form with cancel/continue options.

--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -104,6 +104,12 @@
     <Compile Include="FormNewNormalModification.Designer.cs">
       <DependentUpon>FormNewNormalModification.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelWindowsMessageWithBroderWarning.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModelWindowsMessageWithBroderWarning.Designer.cs">
+      <DependentUpon>ModelWindowsMessageWithBroderWarning.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModelWindowsMessageWithBroder.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -151,6 +157,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormNewNormalModification.resx">
       <DependentUpon>FormNewNormalModification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModelWindowsMessageWithBroderWarning.resx">
+      <DependentUpon>ModelWindowsMessageWithBroderWarning.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModelWindowsMessageWithBroder.resx">
       <DependentUpon>ModelWindowsMessageWithBroder.cs</DependentUpon>
