--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -78,6 +78,18 @@
     <Compile Include="AskOperation.Designer.cs">
       <DependentUpon>AskOperation.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormNewTestModification.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNewTestModification.Designer.cs">
+      <DependentUpon>FormNewTestModification.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ListAllTestQuestions.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ListAllTestQuestions.Designer.cs">
+      <DependentUpon>ListAllTestQuestions.cs</DependentUpon>
+    </Compile>
     <Compile Include="ListAllNormalQuestions.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -145,6 +157,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AskOperation.resx">
       <DependentUpon>AskOperation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNewTestModification.resx">
+      <DependentUpon>FormNewTestModification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ListAllTestQuestions.resx">
+      <DependentUpon>ListAllTestQuestions.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ListAllNormalQuestions.resx">
       <DependentUpon>ListAllNormalQuestions.cs</DependentUpon>
