- Modificado tamaño de los formularios. - Agregado listado de asignaturas a las opciones de crear exámenes y modelos. - Agregado formulario inicial de creación de examen.
- Modify size of forms.
- Added list with all subjects in create new exam option and models option.
- Added initial form to create new exams.

--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -62,6 +62,12 @@
     <Compile Include="AddNewQuestion.Designer.cs">
       <DependentUpon>AddNewQuestion.cs</DependentUpon>
     </Compile>
+    <Compile Include="AskTypeDataNewExam.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AskTypeDataNewExam.Designer.cs">
+      <DependentUpon>AskTypeDataNewExam.cs</DependentUpon>
+    </Compile>
     <Compile Include="AskTypeData.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -151,6 +157,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AddNewQuestion.resx">
       <DependentUpon>AddNewQuestion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AskTypeDataNewExam.resx">
+      <DependentUpon>AskTypeDataNewExam.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AskTypeData.resx">
       <DependentUpon>AskTypeData.cs</DependentUpon>
