- Arreglado bug al pulsar Enter entre formularios. - Arreglado bug con el buscador de preguntas. - Agregada funcionalidad completa de creación de exámenes tipo test.
- Fixed bug when pressing Enter between forms.
- Fixed bug with the question finder.
- Added full functionality for creating test type exams.

--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -50,11 +50,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AllDataTestModel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AllDataTestModel.Designer.cs">
+      <DependentUpon>AllDataTestModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="AllDataNormalModel.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="AllDataNormalModel.Designer.cs">
       <DependentUpon>AllDataNormalModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="CreateTestExam.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CreateTestExam.Designer.cs">
+      <DependentUpon>CreateTestExam.cs</DependentUpon>
     </Compile>
     <Compile Include="CreateNormalExam.cs">
       <SubType>Form</SubType>
@@ -170,8 +182,14 @@
       <DependentUpon>UserControlPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="Utilities.cs" />
+    <EmbeddedResource Include="AllDataTestModel.resx">
+      <DependentUpon>AllDataTestModel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="AllDataNormalModel.resx">
       <DependentUpon>AllDataNormalModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CreateTestExam.resx">
+      <DependentUpon>CreateTestExam.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CreateNormalExam.resx">
       <DependentUpon>CreateNormalExam.cs</DependentUpon>
