--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -83,6 +83,12 @@
     <Compile Include="CreateNormalExam.Designer.cs">
       <DependentUpon>CreateNormalExam.cs</DependentUpon>
     </Compile>
+    <Compile Include="ModelOfModels.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ModelOfModels.Designer.cs">
+      <DependentUpon>ModelOfModels.cs</DependentUpon>
+    </Compile>
     <Compile Include="SelectNormalModel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -217,6 +223,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CreateNormalExam.resx">
       <DependentUpon>CreateNormalExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ModelOfModels.resx">
+      <DependentUpon>ModelOfModels.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SelectNormalModel.resx">
       <DependentUpon>SelectNormalModel.cs</DependentUpon>
