- Modificado modelo de examen. - Agregado petición de preguntas del modelo del examen. - Generación de forma asíncrona el pop-up con los datos del modelo a usar. - Arreglado bug con formulario de soporte. - Arreglado bug al cerrarse el servidor con ventana pop up de modelo abierta.
- Modified exam model.
- Added request for exam model questions.
- Asynchronous generation of the pop-up with the model data to be used.
- Fixed bug with support form.
- Fixed bug when closing the server with open model popup.

--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -83,6 +83,12 @@
     <Compile Include="CreateNormalExam.Designer.cs">
       <DependentUpon>CreateNormalExam.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormNormalModelToUse.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNormalModelToUse.Designer.cs">
+      <DependentUpon>FormNormalModelToUse.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModelOfModels.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -223,6 +229,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CreateNormalExam.resx">
       <DependentUpon>CreateNormalExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNormalModelToUse.resx">
+      <DependentUpon>FormNormalModelToUse.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ModelOfModels.resx">
       <DependentUpon>ModelOfModels.cs</DependentUpon>
