- Agregado funcionamiento completo de uso de modelo normal de examenes.
- Added all functionality for to use normal models.

--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -83,6 +83,12 @@
     <Compile Include="CreateNormalExam.Designer.cs">
       <DependentUpon>CreateNormalExam.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormNewNormalModificationForModel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNewNormalModificationForModel.Designer.cs">
+      <DependentUpon>FormNewNormalModificationForModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormNormalModelToUse.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -229,6 +235,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="CreateNormalExam.resx">
       <DependentUpon>CreateNormalExam.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNewNormalModificationForModel.resx">
+      <DependentUpon>FormNewNormalModificationForModel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormNormalModelToUse.resx">
       <DependentUpon>FormNormalModelToUse.cs</DependentUpon>
