--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -89,6 +89,12 @@
     <Compile Include="FormNewNormalModificationForModel.Designer.cs">
       <DependentUpon>FormNewNormalModificationForModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormNewTestModificationForModel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormNewTestModificationForModel.Designer.cs">
+      <DependentUpon>FormNewTestModificationForModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormNormalModelToUse.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -238,6 +244,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormNewNormalModificationForModel.resx">
       <DependentUpon>FormNewNormalModificationForModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormNewTestModificationForModel.resx">
+      <DependentUpon>FormNewTestModificationForModel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormNormalModelToUse.resx">
       <DependentUpon>FormNormalModelToUse.cs</DependentUpon>
