--- a/TFG-Client/TFG-Client.csproj
+++ b/TFG-Client/TFG-Client.csproj
@@ -65,6 +65,12 @@
     <Compile Include="AllDataNormalModel.Designer.cs">
       <DependentUpon>AllDataNormalModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="AskTypeDataChanges.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AskTypeDataChanges.Designer.cs">
+      <DependentUpon>AskTypeDataChanges.cs</DependentUpon>
+    </Compile>
     <Compile Include="AskTypeDataModel.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -232,6 +238,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AllDataNormalModel.resx">
       <DependentUpon>AllDataNormalModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="AskTypeDataChanges.resx">
+      <DependentUpon>AskTypeDataChanges.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="AskTypeDataModel.resx">
       <DependentUpon>AskTypeDataModel.cs</DependentUpon>
